tests-integration/fixtures/checking/216_ado_bind_error/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
pure :: forall (a :: Type). (a :: Type) -> Effect (a :: Type)
map ::
  forall (a :: Type) (b :: Type).
    ((a :: Type) -> (b :: Type)) -> Effect (a :: Type) -> Effect (b :: Type)
apply ::
  forall (a :: Type) (b :: Type).
    Effect ((a :: Type) -> (b :: Type)) -> Effect (a :: Type) -> Effect (b :: Type)
add :: Int -> Int -> Int
test :: Effect Int

Types
Effect :: Type -> Type

Roles
Effect = [Nominal]

Diagnostics
error[CannotUnify]: Cannot unify 'String' with 'Int'
  --> 13:12..13:13
   |
13 |   in add a b
   |            ^
